# blockdaemon-ubiquity-rust-client

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  README.md  open-api-conf.yaml
docs/: AccountsApi.md  AccountsBalancesMap.md  AccountsBalancesMapV1.md  AccountsObj.md  AlgorandMeta.md  Asset.md  AssetTrait.md  AssetWallet.md  Balance.md  BalanceChange.md  BalanceV1.md  BalancesMap.md  BalancesMapV1.md  BalancesUTXOApi.md  Block.md  BlockIdentifier.md  BlockIdentifierPage.md  BlockIdentifiers.md  BlockIdentifiersApi.md  BlocksApi.md  Coin.md  Collection.md  Contract.md  Currency.md  Effect.md  Error.md  Event.md  EventMeta.md  EvmFee.md  EvmFeeEstimate.md  Fee.md  FeeEstimate.md  FeeEstimateEstimatedFees.md  FeeEstimateResponse.md  FeeEstimatorApi.md  GasEstimatorApi.md  GetAssetResponse.md  GetAssetResponseAsset.md  GetAssetResponseAssetMedia.md  GetAssetResponseAssetTrait.md  (+71 more)
example/: Cargo.toml  README.md
example/src/: main.rs
examples/get-block/: Cargo.toml  README.md
examples/get-block/src/: main.rs
examples/pagination/: Cargo.toml  README.md
examples/pagination/src/: main.rs
spec/: openapi-v1.yaml  openapi.yaml
src/: api.rs  lib.rs
templates/: Cargo.mustache  model.mustache
templates/reqwest/: api.mustache
tests/: accounts_api_test.rs  balances_utxo_api_test.rs  blocks_api_test.rs  platforms_api_test.rs  protocol_and_endpoint_support_api_test.rs  sync_api_test.rs  txs_api_test.rs  utils.rs
tests/mock_files/accounts_api/: xrp_account_rh3VLyj1GbQjX7eA15BwUagEhSrPHmLkSR.json
tests/mock_files/platforms_api/: platforms_overview.json
(+12 files in other folders)
