[package]
name = "ubiquity"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ubiquity_openapi_client = { path = "./generated" }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
mockito = "0.30.0"
tokio = { version = "1.8.0", features = ["full"] }
